SERVER-31255 Prevent dropIndex rollback from failing